--- a/src/pages/myUpload/index.scss
+++ b/src/pages/myUpload/index.scss
@@ -20,6 +20,7 @@
      @include flexBox($direction: column, $justify: space-between, $align: flex-start);
    }
    .item-title {
+     width: 100%;
     @include flexBox($align: flex-start);
     .title-con {
       font-size: 28px;
@@ -39,6 +40,7 @@
    }
    .item-btn {
      width: 100%;
+     height: 60px;
     @include flexBox($justify: flex-end);
    }
   }
