--- a/src/pages/infoDetail/index.scss
+++ b/src/pages/infoDetail/index.scss
@@ -20,6 +20,11 @@
     color: $fontColorDesc;
     padding: 24px 32px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    .desc-text {
+      padding: 0 14px;
+    }
   }
   .rich-box {
     padding: 32px;
